--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Outfit:wght@300;400;600;700&family=Red+Hat+Display:wght@500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     padding: 0;
     box-sizing: border-box;
     margin:0;
-    font-family: 'Lora', serif;
-    
+    font-family: 'Poppins', sans-serif   
 }
 :root{
     --primary-color: #7895B2;
@@ -18,33 +18,53 @@
     --width-card: 300px;
 }
 body{
-    color: black;
-    background-color: var(--third-color);
+    color: white;
+    background-color: black;
     position: relative;
+    padding-top: 40px;
 }
 a{
     text-decoration: none;
+}
+
+header h1{
+    font-size: 2rem;
+    margin-left: 70px;
 }
 
 .card{
     height: var(--height-card);
     width: var(--width-card);
     background-color: var(--secondary-color);
-    margin: var(--small-padding);
+    margin: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
 }
 
-.new-card{
+.desc-box{
+    background-color: white;
+    color: black;
+    width: 100%;
+    height: 40%;
+    max-height: 410px;
+    overflow-y: auto;
+}
+
+.desc-box:active{
+    border: 1px solid black;
+}
+
+.new-card, .add-card{
     display: flex;
     flex-flow: column wrap;
     align-content: space-around;
 }
 
 footer p a:hover{
-    color: black;
+    color: var(--fourth-color);
 }
 
 footer p a{
@@ -63,7 +83,8 @@ footer{
     background-color: var(--primary-color);
     border: none;
     border-radius: 10px;
-    font-size: 40px;
+    font-size: 30px;
+    align-items: center;
 }
 
 #add-new:hover{
@@ -94,7 +115,88 @@ main{
     display: flex;
     flex-flow: row wrap;
     gap: var(--small-spacing);
+    margin: 30px;
+    margin-left: 50px;
 }
+
+.add-card{
+    background-color: rgb(41 203 225 / 71%);
+    color: black;
+    border-radius: 8px;
+    width: 100%;
+    height: 100vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 2;
+    top: 0;
+}
+
+.add-card label{
+    margin-top: 20px;
+}
+
+.close-window-popup-add{
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 50px;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 3;
+    border: none;
+    background-color: transparent;
+    color: black;
+    padding: 20px;
+    margin: 20px;
+}
+
+.popup-container{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    width: 50%;
+    height: 500px;
+    background-color: var(--third-color);
+    padding: 30px;
+    border-radius: 20px;
+}
+
+.add-card .add-btn{
+    border: none;
+    background-color: brown;
+    border-radius: 17px;
+    padding: 10px;
+    border: 1px solid black;
+    color: var(--fourth-color);
+}
+
+.add-card .add-btn:hover{
+    background-color:rgb(181, 72, 18);
+}
+
+.add-card textarea{
+    max-width: 100%;
+    max-height: 30%;
+    min-width: 100%;
+    min-height: 30%;
+}
+
+.new-card{
+    height: var(--height-card);
+    width: var(--width-card);
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    
+    margin: 20px;
+}
+
+
+
 
 /* #close-btn{
 background: linear-gradient(to right,var(--fourth-color));
@@ -110,3 +212,70 @@ animation: coresDancantes 2s linear infinite;
         filter: hue-rotate(360deg);
     }
 } */
+.new-card {
+    
+    border: none;
+    outline: none;
+    color: rgb(7, 7, 7);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 20px;
+    transition: ease-out 0.3s;
+}
+
+.new-card:hover{
+    transform: scale(1.1);
+    transition: 0.5s ease-in-out;
+}
+
+.new-card:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 6px);
+    height: calc(100% + 6px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 20px;
+}
+
+
+
+.new-card:active {
+    color: #000
+}
+
+.new-card:active:after {
+    background: transparent;
+}
+
+.new-card:hover:before {
+    opacity: 1;
+    
+}
+
+.new-card:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgb(236, 216, 216);
+    left: 0;
+    top: 0;
+    border-radius: 20px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
